--- a/phpmyadmin/.README.j2
+++ b/phpmyadmin/.README.j2
@@ -1,4 +1,4 @@
-# Home Assistant Add-on: phpMyAdmin
+# Home Assistant Add-on: "Unofficial" phpMyAdmin
 
 [![Release][release-shield]][release] ![Project Stage][project-stage-shield] ![Project Maintenance][maintenance-shield]
 
