--- a/phpmyadmin/.README.j2
+++ b/phpmyadmin/.README.j2
@@ -1,10 +1,10 @@
-# Home Assistant Add-on: "Unofficial" phpMyAdmin
+# Home Assistant App: "Unofficial" phpMyAdmin
 
 [![Release][release-shield]][release] ![Project Stage][project-stage-shield] ![Project Maintenance][maintenance-shield]
 
 [![Discord][discord-shield]][discord] [![Community Forum][forum-shield]][forum]
 
-A web interface for the official MariaDB add-on.
+A web interface for the official MariaDB app.
 
 ## About
 
@@ -13,16 +13,16 @@ used operations (managing databases, tables, columns, relations, indexes,
 users, permissions, etc) can be performed via the user interface,
 while you still have the ability to directly execute any SQL statement.
 
-This add-on was specifically designed to manage the official Home Assistant
-MariaDB add-on.
+This app was specifically designed to manage the official Home Assistant
+MariaDB app.
 
 ![phpMyAdmin screenshot][screenshot]
 
 {% if channel == "edge" %}
 ## WARNING! THIS IS AN EDGE VERSION!
 
-This Home Assistant Add-ons repository contains edge builds of add-ons. Edge builds
-add-ons are based upon the latest development version.
+This Home Assistant Apps repository contains edge builds of appss. Edge builds
+appss are based upon the latest development version.
 
 - They may not work at all.
 - They might stop working at any time.
@@ -31,10 +31,10 @@ add-ons are based upon the latest development version.
 This repository was created for:
 
 - Anybody willing to test.
-- Anybody interested in trying out upcoming add-ons or add-on features.
+- Anybody interested in trying out upcoming apps or app features.
 - Developers.
 
-If you are more interested in stable releases of our add-ons:
+If you are more interested in stable releases of our apps:
 
 <https://github.com/erik73/repository>
 
@@ -42,7 +42,7 @@ If you are more interested in stable releases of our add-ons:
 {% if channel == "beta" %}
 ## WARNING! THIS IS A BETA VERSION!
 
-This Home Assistant Add-ons repository contains beta releases of add-ons.
+This Home Assistant Appss repository contains beta releases of apps.
 
 - They might stop working at any time.
 - They could have a negative impact on your system.
@@ -50,9 +50,9 @@ This Home Assistant Add-ons repository contains beta releases of add-ons.
 This repository was created for:
 
 - Anybody willing to test.
-- Anybody interested in trying out upcoming add-ons or add-on features.
+- Anybody interested in trying out upcoming apps or app features.
 
-If you are more interested in stable releases of our add-ons:
+If you are more interested in stable releases of our apps:
 
 <https://github.com/erik73/repository>
 
